--- a/Home.html
+++ b/Home.html
@@ -26,7 +26,7 @@
     <meta property="og:type" content="website">
     <link rel="canonical" href="/">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="https://awesomestuffmod.nicepage.io/Home.html?version=8882ffb6-436a-4b0e-9f43-018199077bd8" data-home-page-title="Home" class="u-body u-overlap u-xl-mode" data-lang="ru"><header class="u-box-shadow u-clearfix u-header u-sticky u-sticky-933a u-header" id="sec-4ff2"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body u-overlap u-xl-mode" data-lang="ru"><header class="u-box-shadow u-clearfix u-header u-sticky u-sticky-933a u-header" id="sec-4ff2"><div class="u-clearfix u-sheet u-sheet-1">
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; text-transform: uppercase;">
             <a class="u-button-style u-custom-active-border-color u-custom-border u-custom-border-color u-custom-border-radius u-custom-borders u-custom-hover-border-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-decoration u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
