--- a/Home.html
+++ b/Home.html
@@ -71,7 +71,7 @@
       
       
       <div class="u-clearfix u-sheet u-sheet-1">
-        <div class="u-list u-list-1">
+        <div class="u-expanded-width u-list u-list-1">
           <div class="u-repeater u-repeater-1">
             <div class="u-align-center u-container-style u-custom-color-14 u-list-item u-repeater-item u-shape-rectangle u-list-item-1" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="500" data-animation-direction="">
               <div class="u-container-layout u-similar-container u-container-layout-1"><span class="u-align-center u-file-icon u-hover-feature u-icon u-icon-rectangle u-icon-1"><img src="images/_2023-04-08_200914170.png" alt=""></span>
